# remoteActivity

./: .gitignore  Ethical Project Detail.txt  Project detail.txt  README.md  remoteActivity.sln  test_complete.bat  test_persistent.bat
Bot/: build_and_run.bat  main.c
Client/: build.bat  project_structure.md
Client/RemoteAccessClient/: build.bat
Client/RemoteAccessClient/include/common/: Config.h  DDNSConfig.h  Logger.h  Protocol.h
Client/RemoteAccessClient/include/network/: DDNSManager.h  NetworkManager.h
Client/RemoteAccessClient/include/system/: SystemInfo.h
Client/RemoteAccessClient/src/: main.cpp
Client/RemoteAccessClient/src/common/: DDNSConfig.cpp  Logger.cpp  Protocol.cpp
Client/RemoteAccessClient/src/network/: DDNSManager.cpp  NetworkManager.cpp
Client/RemoteAccessClient/src/system/: SystemInfo.cpp
Client/include/: CommandHandler.h  Config.h  NetworkClient.h  Stealth.h  Utils.h
Client/src/: CommandHandler.cpp  Config.cpp  NetworkClient.cpp  Stealth.cpp  Utils.cpp  main.cpp
Client_SpyBot/: CMakeLists.txt  Makefile  build.bat  build.sh
Client_SpyBot/include/: ConfigManager.h  DataCollector.h  NetworkClient.h  SystemInfo.h
Client_SpyBot/src/: ConfigManager.cpp  DataCollector.cpp  NetworkClient.cpp  SystemInfo.cpp  main.cpp
Server/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
Server/RemoteAccessServer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RemoteAccessServer.csproj
Server/RemoteAccessServer/Core/: ClientSession.cs  FirewallManager.cs  Logger.cs  ServerManager.cs
Server/RemoteAccessServer/Models/: ClientConnectedEventArgs.cs  ClientDisconnectedEventArgs.cs  ClientInfo.cs  CommandExecutedEventArgs.cs  FirewallCommand.cs  FirewallRule.cs  FirewallStatus.cs
Server/ServerApp/: MainWindow.xaml  MainWindow.xaml.cs
Server/ViewModels/: ClientsViewModel.cs  DashboardViewModel.cs  FileManagerViewModel.cs  KeyloggerLogsViewModel.cs  RemoteShellViewModel.cs  ScreenControlViewModel.cs  SettingsViewModel.cs
Server/Views/: AboutView.xaml  ClientsView.xaml  DashboardView.xaml  FileManagerView.xaml  KeyloggerLogsView.xaml  RemoteShellView.xaml  ScreenControlView.xaml  SettingsView.xaml
Server_WPF/: build.bat
Server_WPF/RemoteActivityServer/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RemoteActivityServer.csproj
Server_WPF/RemoteActivityServer/Converters/: Converters.cs
Server_WPF/RemoteActivityServer/Models/: ClientConnection.cs
Server_WPF/RemoteActivityServer/Services/: TcpServerService.cs
Server_WPF/RemoteActivityServer/ViewModels/: MainViewModel.cs
bot/: README_DISCOVERY.md  bot_controller.cpp  bot_controller.h  build.bat  main.cpp  network_client.cpp  network_client.h  simple_bot.cpp  system_info.cpp  system_info.h
client/: CMakeLists.txt  build.bat
client/include/: remote_client.h
client/logs/: client_log_20250507.txt
client/src/: logger.c  main.c  network.c  screen_capture.c
docs/: ARCHITECTURE.md  USAGE.md
server/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README_MVC.md  RemoteServer.csproj  ScreenSharingWindow.xaml  ScreenSharingWindow.xaml.cs  server_log20250507.txt
server/Controllers/: ServerController.cs
server/Converters/: BoolToStartStopConverter.cs
server/Models/: ConnectedClient.cs  Message.cs  MessageType.cs  ServerModel.cs
server/Services/: NetworkService.cs
server/ViewModels/: MainWindowViewModel.cs
server/Views/: IServerView.cs  ServerView.xaml  ServerView.xaml.cs
server/logs/: server_log_20250507.txt
